Fix: status current page align and conditional disable login button

--- a/src/Components/Table/Table.module.css
+++ b/src/Components/Table/Table.module.css
@@ -155,6 +155,10 @@
   margin: 0 0.75rem 0 0;
 }
 
+.status {
+  margin: 0 0.75rem;
+}
+
 .button:hover,
 .backButton:hover,
 .downloadButton:hover {
