--- a/src/Pages/ResetPassword/ResetPassword.module.css
+++ b/src/Pages/ResetPassword/ResetPassword.module.css
@@ -35,6 +35,7 @@
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  color: var(--first-text-color);
 }
 
 .button:hover {
@@ -44,6 +45,7 @@
 .button:disabled {
   background-color: var(--first-button-color-disabled);
   cursor: not-allowed;
+  color: var(--first-text-color-disabled);
 }
 
 .input {
